metrics/network-policy-monitoring-allow-egress-finance-ticker-collector-kubernetes-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-egress-finance-ticker-collector-kubernetes-api
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: finance-ticker-collector
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 192.168.1.209/32
      ports:
        - protocol: TCP
          port: 6443
